--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Main.Main
-EditorStartupMap=/Game/Main.Main
+EditorStartupMap=/Game/Levels/TestLevel.TestLevel
 GlobalDefaultGameMode=/Game/BP_GameModeBase.BP_GameModeBase_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
